--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/luks-format-detached-by-partuuid@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/luks-format-detached-by-partuuid@.service
@@ -14,7 +14,7 @@ Before=initrd-root-device.target
 Before=initrd-usr-fs.target initrd-root-fs.target
 Before=shutdown.target initrd-switch-root.target
 Conflicts=shutdown.target initrd-switch-root.target
-Before=dev-mapper-luks\x2d%i.device blockdev@dev-mapper-luks\x2d%i.target
+Before=blockdev@dev-mapper-luks\x2d%i.target
 ConditionVirtualization=!container
 RequiresMountsFor=%t/spork/luks
 ConditionPathExists=!%t/spork/luks/%I.luks
