--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptenroll-convert-empty-to-fido2@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptenroll-convert-empty-to-fido2@.service
@@ -16,6 +16,7 @@ Conflicts=shutdown.target initrd-switch-root.target
 [Service]
 Type=oneshot
 StandardOutput=journal+console
+SyslogIdentifier=luks-convert-fido2-%I
 ExecCondition=udevadm lock -d '%f' sh -c "cryptsetup isLuks '%f' && echo | cryptsetup open --test-passphrase --disable-external-tokens '%f'"
 ExecStart=udevadm lock -d '%f' systemd-cryptenroll --unlock-key-file=/dev/null --fido2-device=auto --wipe-slot=empty '%f'
 
