bootdisk: Improvements for booting on bare metal

--- a/mkosi.images/bootdisk/mkosi.conf
+++ b/mkosi.images/bootdisk/mkosi.conf
@@ -16,7 +16,7 @@ Bootable=yes
 
 KernelCommandLine=
 KernelCommandLine=
-  console=ttyS0 loglevel=7
+  #console=ttyS0 loglevel=7
   root=/dev/mapper/root ro rootflags=noexec,nosuid,nodev
   mount.usr=/dev/mapper/usr mount.usrflags=nodev,ro
 
