--- a/mkosi.images/bootdisk/mkosi.repart/00-esp.conf
+++ b/mkosi.images/bootdisk/mkosi.repart/00-esp.conf
@@ -1,7 +1,8 @@
 [Partition]
 Type=esp
 Format=vfat
+CopyFiles=/boot:/
 CopyFiles=/efi:/
 SizeMinBytes=1G
 SizeMaxBytes=1G
-MakeDirectories=/loader/credentials /loader/addons
+MakeDirectories=/loader/credentials /loader/addons /loader/keys
