--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/luks-format-by-partlabel@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/luks-format-by-partlabel@.service
@@ -21,7 +21,7 @@ OnSuccess=systemd-cryptsetup-by-%j@%i.service
 [Service]
 Type=oneshot
 StandardOutput=journal+console
-SyslogIdentifier=luks-format-%I
+SyslogIdentifier=luks-format@%I
 #RemainAfterExit=yes
 # The luksFormat script supports some environment variables:
 #Environment="LUKSFORMAT_CIPHER="
