--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/luks-format-detached-by-partuuid@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/luks-format-detached-by-partuuid@.service
@@ -23,7 +23,7 @@ OnSuccess=systemd-cryptsetup-detached-by-%j@%i.service
 [Service]
 Type=oneshot
 StandardOutput=journal+console
-SyslogIdentifier=luks-format-detached-%I
+SyslogIdentifier=luks-format-detached@%I
 #RemainAfterExit=yes
 # The luksFormat script supports some environment variables:
 #Environment="LUKSFORMAT_CIPHER="
