--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/cryptsetup-rotate-keys@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/cryptsetup-rotate-keys@.service
@@ -13,12 +13,11 @@ Conflicts=shutdown.target initrd-switch-root.target
 Type=oneshot
 StandardOutput=journal+console
 StandardError=inherit
-SyslogIdentifier=cryptsetup-rotate-keys-%I
+SyslogIdentifier=%p@%f
 TimeoutSec=infinity
 Environment="EXTRA_REENCRYPT_ARGS="
-ExecStartPre=cryptsetup isLuks '%f'
+ExecCondition=udevadm lock -d '%f' sh -c "cryptsetup isLuks '%f' && echo | cryptsetup open --test-passphrase --disable-external-tokens '%f'"
 ExecStartPre=echo 'Rotating volume encryption key on %f. This may take some time...'
-ExecStartPre=-flock -x --verbose /dev/security/fido true
 ExecStart=udevadm lock -d '%f' sh -c "echo | cryptsetup reencrypt --progress-frequency=2 ${EXTRA_REENCRYPT_ARGS} '%f'"
 
 [Install]
