--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptenroll-convert-empty-to-fido2@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptenroll-convert-empty-to-fido2@.service
@@ -6,7 +6,7 @@ After=dev-security-fido.device
 Requires=%i.device
 After=%i.device
 Wants=cryptsetup-rotate-keys@%i.service
-Before=cryptsetup-rotate-keys@%i.service
+After=cryptsetup-rotate-keys@%i.service
 Wants=cryptsetup-pre.target
 After=cryptsetup-pre.target
 Before=cryptsetup.target
@@ -16,7 +16,7 @@ Conflicts=shutdown.target initrd-switch-root.target
 [Service]
 Type=oneshot
 StandardOutput=journal+console
-SyslogIdentifier=luks-convert-fido2-%I
+SyslogIdentifier=luks-convert-fido2@%f
 ExecCondition=udevadm lock -d '%f' sh -c "cryptsetup isLuks '%f' && echo | cryptsetup open --test-passphrase --disable-external-tokens '%f'"
 ExecStart=udevadm lock -d '%f' systemd-cryptenroll --unlock-key-file=/dev/null --fido2-device=auto --wipe-slot=empty '%f'
 
