installer: Iron out imaging bugs

--- a/mkosi.conf
+++ b/mkosi.conf
@@ -1,3 +1,6 @@
+[Config]
+MinimumVersion=19
+
 [Distribution]
 @Distribution=fedora
 
@@ -6,9 +9,6 @@
 CacheDirectory=mkosi.cache
 OutputDirectory=mkosi.output
 #ManifestFormat=json,changelog
-
-#[Preset]
-#Presets=system
 
 [Content]
 SourceDateEpoch=0
