--- a/mkosi.conf.d/50-rpm.conf
+++ b/mkosi.conf.d/50-rpm.conf
@@ -4,4 +4,4 @@ Distribution=|centos
 Distribution=|opensuse
 
 [Distribution]
-PackageManagerTrees=rpm-config/:/
+PackageManagerTrees=common/rpm-config/:/etc/rpm/
