--- a/mkosi.images/base/mkosi.conf
+++ b/mkosi.images/base/mkosi.conf
@@ -1,9 +1,8 @@
 [Output]
 Format=directory
-Seed=2bc9ca56-4112-47bf-a66a-14788fc97664
+Output=base
 
 [Content]
-SourceDateEpoch=0
 Bootable=no
 CleanPackageMetadata=no
 
@@ -138,6 +137,7 @@ Packages=
          file
          findutils
          gawk
+         jq
          less
          moreutils
          nano
