--- a/mkosi.images/bootdisk/mkosi.conf
+++ b/mkosi.images/bootdisk/mkosi.conf
@@ -4,24 +4,24 @@ Dependencies=initrd
 Dependencies=system
 
 [Output]
-Seed=4213a267-ab41-4e1f-8b2a-c08d3e579559
-Format=disk
-SplitArtifacts=no
+@Output=bootdisk
+@Format=disk
+@SplitArtifacts=yes
+@CompressOutput=no
 
 [Content]
-BaseTrees=../../mkosi.output/base
-ExtraTrees=../../mkosi.output:/mkosi.output/
+BaseTrees=%O/base
+ExtraTrees=%O:/mkosi.output/
 Bootloader=systemd-boot
 Bootable=yes
 
-KernelCommandLine=
-KernelCommandLine=
-  #console=ttyS0 loglevel=7
-  root=/dev/mapper/root ro rootflags=noexec,nosuid,nodev
-  mount.usr=/dev/mapper/usr mount.usrflags=nodev,ro
+#KernelCommandLine=
+#KernelCommandLine=
+#  console=ttyS0 loglevel=7
+#  root=/dev/mapper/root ro rootflags=noexec,nosuid,nodev
+#  mount.usr=/dev/mapper/usr mount.usrflags=nodev,ro
 
-Initrds=../../mkosi.output/base_%v-early-ucode.cpio
-Initrds=../../mkosi.output/initrd
+Initrds=%O/initrd
 KernelModulesInitrd=yes
 # Saving some space in the initrd by excluding unnecessary drivers
 KernelModulesInitrdExclude=
@@ -130,9 +130,6 @@ KernelModulesInitrdInclude=
 #  ^mm/
 #  ^net/
 #  ^virt/
-#KernelCommandLine=
-#KernelCommandLine=root=tmpfs
-# systemd.mount-extra=overlay:/etc:overlay:noauto,x-systemd.automount,lowerdir=/usr/etc,upperdir=/var/etc
 
 
 [Validation]
