--- a/mkosi.images/initrd/mkosi.conf
+++ b/mkosi.images/initrd/mkosi.conf
@@ -1,7 +1,7 @@
 [Output]
 Format=cpio
 Output=initrd
-ImageId=spork
+CompressOutput=yes
 
 [Content]
 MakeInitrd=yes
@@ -66,9 +66,11 @@ Packages=
          gnupg2
          google-authenticator
          integritysetup
+         libfido2
          oathtool
          #tpm2-pkcs11
          #tpm2-pkcs11-tools
+         tpm2-tss
          veritysetup
 
 # Network setup
@@ -113,15 +115,38 @@ Packages=
 
 CleanPackageMetadata=yes
 RemoveFiles=
+            # we don't need this after the binary catalogs have been built
+            /usr/lib/systemd/catalog
+            /etc/udev/hwdb.d
+            /usr/lib/udev/hwdb.d
+
+            # this is not needed by anything updated in the last 20 years
+            /etc/services
+
+            # Including kernel images in the initrd is generally not useful.
+            # This also stops mkosi from extracting the kernel image out of the image as a separate output.
+            /usr/lib/modules/*/vmlinuz*
+            /usr/lib/modules/*/System.map
+
+            /etc/pki/ca-trust/extracted/java
+            /boot/efi/*
             /efi/EFI
             /var/log
             /var/cache
-            /usr/lib/modules/*/vmlinuz*
-            /usr/lib/modules/*/System.map
-            /etc/pki/ca-trust/extracted/java/cacerts
             /usr/lib/sysimage/libdnf5/transaction_history.sqlite*
             /var/cache/ldconfig/aux-cache
             /usr/share/gcc*
             /usr/share/gdb*
             /usr/share/gnupg/help.*.txt
-            /usr/share/doc
+            /usr/share/doc/*
+            /usr/share/info/*
+            /usr/share/man/*
+
+# Not needed inside the initrd
+RemovePackages=
+               dracut
+               systemd-boot
+
+# Configure locale explicitly so that all other locale data is stripped on distros whose package manager supports it.
+@Locale=C.UTF-8
+WithDocs=no
