--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/copy-sys-images@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/copy-sys-images@.service
@@ -5,6 +5,7 @@ Wants=cryptsetup.target
 After=cryptsetup.target
 After=initrd-init-disks.target
 After=vgcreate@%i.service
+Before=refresh-veritytab-from-vg@%i.service
 Before=initrd-install-sys.target
 Before=initrd-root-device.target initrd-fs.target
 Before=shutdown.target initrd-switch-root.target
