--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/initrd-auth-pre.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/initrd-auth-pre.service
@@ -13,4 +13,5 @@ Type=oneshot
 RemainAfterExit=yes
 StandardOutput=journal+console
 StandardError=inherit
+SyslogIdentifier=%N
 ExecStart=sh -c "printf 'Begin boot-time user authentication\n'"
