--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/initrd-install-sys-complete.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/initrd-install-sys-complete.service
@@ -5,6 +5,9 @@ After=initrd-install-sys.target
 Before=shutdown.target initrd-switch-root.target
 Conflicts=shutdown.target initrd-switch-root.target
 OnSuccess=default.target
+OnSuccess=initrd-root-fs.target
+OnSuccess=initrd-fs.target
+OnSuccess=sysroot.mount
 OnSuccessJobMode=replace
 
 [Service]
