--- a/mkosi.images/system/mkosi.conf
+++ b/mkosi.images/system/mkosi.conf
@@ -1,27 +1,15 @@
 [Config]
 Dependencies=base
-Dependencies=initrd
 
 [Output]
-Seed=1bec7dfe-9a8b-4b0d-b17e-49ac96d4cfa6
 Format=disk
 SplitArtifacts=yes
 ManifestFormat=json,changelog
-ImageId=spork
+Output=spork
 
 [Content]
-BaseTrees=../../mkosi.output/base
+BaseTrees=%O/base
 Bootable=no
-#Bootloader=uki
-#Initrds=../../mkosi.output/initrd
-#KernelModulesInitrdExclude=
-#   drivers/media
-#   sound/
-#   kernel/kheaders*
-#KernelCommandLine=
-#KernelCommandLine=root=tmpfs
-# systemd.mount-extra=overlay:/etc:overlay:noauto,x-systemd.automount,lowerdir=/usr/etc,upperdir=/var/etc
-
 
 [Validation]
 SecureBoot=yes
