--- a/mkosi.images/bootdisk/mkosi.repart/50-luks-headers.conf
+++ b/mkosi.images/bootdisk/mkosi.repart/50-luks-headers.conf
@@ -1,6 +1,7 @@
 [Partition]
 Type=linux-generic
 Label=lukshdrs
-SizeMinBytes=300M
+SizeMinBytes=500M
 SizeMaxBytes=1G
+SplitName=lukshdrs
 # We will format and encrypt this partition on first boot
