--- a/mkosi.images/bootdisk/mkosi.repart/80-sysimages.conf
+++ b/mkosi.images/bootdisk/mkosi.repart/80-sysimages.conf
@@ -1,8 +1,9 @@
 [Partition]
 Type=linux-generic
 Label=sysimages
-Format=xfs
+Format=ext4
 Encrypt=key-file
 CopyFiles=/images/:/
 SizeMinBytes=1G
 GrowFileSystem=yes
+SplitName=sysimages
