initrd: Check verity signatures in initrd without kernel keyring

--- a/mkosi.conf
+++ b/mkosi.conf
@@ -3,6 +3,7 @@ MinimumVersion=19
 
 [Distribution]
 @Distribution=fedora
+Release=rawhide
 
 [Output]
 @Format=disk
@@ -12,6 +13,14 @@ OutputDirectory=mkosi.output
 
 [Content]
 SourceDateEpoch=0
+
+[Validation]
+SecureBootKey=secure-boot/secure-boot.key
+SecureBootCertificate=secure-boot/secure-boot.crt
+VerityKey=secure-boot/verity.key
+VerityCertificate=secure-boot/verity.crt
+SignExpectedPcr=yes
+Checksum=yes
 
 [Host]
 Acl=yes
