--- a/mkosi.images/bootdisk/mkosi.conf
+++ b/mkosi.images/bootdisk/mkosi.conf
@@ -16,10 +16,10 @@ Bootloader=systemd-boot
 Bootable=yes
 
 #KernelCommandLine=
-#KernelCommandLine=
-#  console=ttyS0 loglevel=7
-#  root=/dev/mapper/root ro rootflags=noexec,nosuid,nodev
-#  mount.usr=/dev/mapper/usr mount.usrflags=nodev,ro
+KernelCommandLine=
+  root=/dev/mapper/root ro rootflags=noexec,nosuid,nodev
+  mount.usr=/dev/mapper/usr mount.usrflags=nodev,ro
+  loglevel=7
 
 Initrds=%O/initrd
 KernelModulesInitrd=yes
