--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/refresh-veritytab-from-vg@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/refresh-veritytab-from-vg@.service
@@ -16,6 +16,8 @@ ConditionPathExistsGlob=/dev/%I/*-verity-sig
 Type=oneshot
 StandardOutput=journal+console
 StandardError=inherit
+ImportCredential=verity.*
+ImportCredential=veritysetup.*
 ExecStartPre=touch /etc/veritytab
 ExecStart=/usr/libexec/refresh-veritytab-from-vg '%I'
 ExecStartPost=-systemctl --no-block daemon-reload
