--- a/mkosi.images/bootdisk/mkosi.conf
+++ b/mkosi.images/bootdisk/mkosi.conf
@@ -4,7 +4,7 @@ Dependencies=initrd
 Dependencies=system
 
 [Output]
-@Output=bootdisk
+@Output=bootdisk_%v
 @Format=disk
 @SplitArtifacts=yes
 @CompressOutput=no
@@ -16,10 +16,10 @@ Bootloader=systemd-boot
 Bootable=yes
 
 #KernelCommandLine=
-KernelCommandLine=
-  root=/dev/mapper/root ro rootflags=noexec,nosuid,nodev
-  mount.usr=/dev/mapper/usr mount.usrflags=nodev,ro
-  loglevel=7
+#KernelCommandLine=
+#  root=/dev/mapper/root ro rootflags=noexec,nosuid,nodev
+#  mount.usr=/dev/mapper/usr mount.usrflags=nodev,ro
+#  loglevel=7
 
 Initrds=%O/initrd
 KernelModulesInitrd=yes
