--- a/mkosi.images/system/mkosi.conf
+++ b/mkosi.images/system/mkosi.conf
@@ -5,7 +5,7 @@ Dependencies=base
 Format=disk
 SplitArtifacts=yes
 ManifestFormat=json,changelog
-Output=spork
+Output=%i_%v
 
 [Content]
 BaseTrees=%O/base
