--- a/mkosi.images/initrd/mkosi.conf
+++ b/mkosi.images/initrd/mkosi.conf
@@ -1,6 +1,6 @@
 [Output]
 Format=cpio
-Output=initrd
+Output=initrd_%v
 CompressOutput=yes
 
 [Content]
@@ -8,6 +8,7 @@ MakeInitrd=yes
 SourceDateEpoch=0
 Bootable=no
 BuildPackages=
+ExtraTrees=../../secure-boot/public:/etc/secure-boot/
 
 Packages=
 
