restructuring build to reduce redundant steps

--- a/mkosi.images/bootdisk/mkosi.conf
+++ b/mkosi.images/bootdisk/mkosi.conf
@@ -1,138 +1,15 @@
 [Config]
 Dependencies=base
-Dependencies=initrd
 Dependencies=system
 
 [Output]
-@Output=bootdisk_%v
+@Output=boot-%i_%v
 @Format=disk
 @SplitArtifacts=yes
 @CompressOutput=no
 
 [Content]
-BaseTrees=%O/base
+BaseTrees=%O/base_%v
 ExtraTrees=%O:/mkosi.output/
-Bootloader=systemd-boot
-Bootable=yes
-
-#KernelCommandLine=
-#KernelCommandLine=
-#  root=/dev/mapper/root ro rootflags=noexec,nosuid,nodev
-#  mount.usr=/dev/mapper/usr mount.usrflags=nodev,ro
-#  loglevel=7
-
-Initrds=%O/initrd
-KernelModulesInitrd=yes
-# Saving some space in the initrd by excluding unnecessary drivers
-KernelModulesInitrdExclude=
-  ^drivers/bluetooth/
-  ^drivers/firewire/
-  ^drivers/gpu/
-  ^drivers/iio/
-  ^drivers/infiniband/
-  ^drivers/media/
-  ^drivers/net/wireless/
-  ^sound/
-  test
-#  ^drivers/
-#  sound
-KernelModulesInitrdInclude=
-  qxl
-  hv_
-  hyperv
-  qemu
-  vbox
-  #virtio # also matches sound/virtio/virtio_snd.ko
-  #^drivers/.*virtio
-  vmw
-  ^drivers/.*/xen
-#  ^drivers/acpi/
-#  ^drivers/ata/
-#  ^drivers/base/
-#  ^drivers/block/
-#  ^drivers/char/
-#  ^drivers/clk/
-#  ^drivers/counter/
-#  ^drivers/cpufreq/
-#  ^drivers/crypto/
-#  ^drivers/devfreq/
-#  ^drivers/dma/
-#  ^drivers/edac/
-#  ^drivers/firmware/
-#  ^drivers/fpga/
-#  ^drivers/gpio/
-#  ^drivers/hid/
-#  ^drivers/hv/
-#  ^drivers/input/.*-keymap
-#  ^drivers/input/keyboard/
-#  ^drivers/input/mouse/
-#  ^drivers/input/rmi4/
-#  ^drivers/input/serio/
-#  ^drivers/input/tablet/
-#  ^drivers/iommu/
-#  ^drivers/leds/
-#  ^drivers/md/
-#  ^drivers/memstick/
-#  ^drivers/message/
-#  ^drivers/mfd/
-#  ^drivers/misc/
-#  ^drivers/mmc/
-#  ^drivers/mtd/
-#  ^drivers/mux/
-#  ^drivers/net/bonding/
-#  ^drivers/net/ethernet/8390/
-#  ^drivers/net/ethernet/amd/pcnet32
-#  ^drivers/net/ethernet/intel/
-#  ^drivers/net/ethernet/google/
-#  ^drivers/net/ethernet/microsoft/
-#  ^drivers/net/ethernet/realtek/
-#  ^drivers/net/geneve
-#  ^drivers/net/hyperv/
-#  ^drivers/net/ipvlan/
-#  ^drivers/net/macsec
-#  ^drivers/net/macvlan
-#  ^drivers/net/mdio/
-#  ^drivers/net/mii
-#  ^drivers/net/team/
-#  ^drivers/net/thunderbolt/
-#  ^drivers/net/tun
-#  ^drivers/net/usb/
-#  ^drivers/net/veth
-#  ^drivers/net/virtio_net
-#  ^drivers/net/vmxnet3/
-#  ^drivers/net/vrf
-#  ^drivers/net/vxlan/
-#  ^drivers/net/xen.*
-#  ^drivers/nvdimm/
-#  ^drivers/nvme/
-#  ^drivers/nvmem/
-#  ^drivers/pci/
-#  ^drivers/pinctrl/
-#  ^drivers/platform/
-#  ^drivers/rtc/
-#  #^drivers/scsi/
-#  ^drivers/spi/
-#  ^drivers/ssb/
-#  ^drivers/target/
-#  ^drivers/thunderbolt/
-#  ^drivers/tty/
-#  ^drivers/uio/
-#  ^drivers/usb/
-#  ^drivers/vdpa/
-#  ^drivers/vfio/
-#  ^drivers/video/backlight/
-#  ^drivers/virt/
-#  ^drivers/virtio/
-#  ^drivers/watchdog/
-#  ^drivers/xen/
-#  ^fs/
-#  ^lib/
-#  ^mm/
-#  ^net/
-#  ^virt/
-
-
-[Validation]
-SecureBoot=yes
-SignExpectedPcr=yes
-Checksum=yes
+Bootable=no
+KernelModulesInitrd=no
