--- a/mkosi.images/system/mkosi.conf
+++ b/mkosi.images/system/mkosi.conf
@@ -1,18 +1,40 @@
 [Config]
 Dependencies=base
+Dependencies=initrd
 
 [Output]
 Format=disk
 SplitArtifacts=yes
-ManifestFormat=json,changelog
 Output=%i_%v
 
 [Content]
-BaseTrees=%O/base
+BaseTrees=%O/base_%v
 Bootable=yes
-Bootloader=uki
+Bootloader=systemd-boot
+Initrds=%O/initrd_%v
+KernelModulesInitrd=yes
+# Saving some space in the initrd by excluding unnecessary drivers
+KernelModulesInitrdExclude=
+  ^drivers/bluetooth/
+  ^drivers/firewire/
+  ^drivers/gpu/
+  ^drivers/iio/
+  ^drivers/infiniband/
+  ^drivers/media/
+  ^drivers/net/wireless/
+  ^sound/
+  test
+KernelModulesInitrdInclude=
+  qxl
+  hv_
+  hyperv
+  qemu
+  vbox
+  #virtio # also matches sound/virtio/virtio_snd.ko
+  #^drivers/.*virtio
+  vmw
+  ^drivers/.*/xen
 
-[Validation]
-SecureBoot=yes
-SignExpectedPcr=yes
-Checksum=yes
+Packages=
+         kernel
+         kernel-modules
