--- a/mkosi.conf
+++ b/mkosi.conf
@@ -8,12 +8,10 @@ MinimumVersion=19
 @Format=disk
 CacheDirectory=mkosi.cache
 OutputDirectory=mkosi.output
-#ManifestFormat=json,changelog
-
-[Content]
-SourceDateEpoch=0
+ManifestFormat=json
 
 [Validation]
+SecureBoot=yes
 SecureBootKey=secure-boot/secure-boot.key
 SecureBootCertificate=secure-boot/secure-boot.crt
 VerityKey=secure-boot/verity.key
