--- a/mkosi.images/bootdisk/mkosi.repart/00-esp.conf
+++ b/mkosi.images/bootdisk/mkosi.repart/00-esp.conf
@@ -3,6 +3,9 @@ Type=esp
 Format=vfat
 CopyFiles=/boot:/
 CopyFiles=/efi:/
+CopyFiles=/mkosi.output/%M_%A-systemd-bootx64.efi:/EFI/systemd/systemd-bootx64.efi
+CopyFiles=/mkosi.output/%M_%A-systemd-bootx64.efi:/EFI/BOOT/BOOTX64.EFI
+CopyFiles=/mkosi.output/%M_%A.efi:/EFI/Linux/
 SizeMinBytes=1G
 SizeMaxBytes=1G
 MakeDirectories=/loader/credentials /loader/addons /loader/keys
