initrd: First booting version

--- a/initrd/mkosi.extra/usr/lib/systemd/system/initrd-auth-complete.service
+++ b/initrd/mkosi.extra/usr/lib/systemd/system/initrd-auth-complete.service
@@ -6,7 +6,7 @@ After=initrd-auth.target
 Before=shutdown.target initrd-switch-root.target
 Conflicts=shutdown.target initrd-switch-root.target
 OnSuccess=initrd-init-disks.target
-OnSuccessJobMode=flush
+#OnSuccessJobMode=flush
 
 [Service]
 Type=oneshot
