--- a/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptsetup-detached-by-partuuid@.service.d/90-mount-lukshdrs.conf
+++ b/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptsetup-detached-by-partuuid@.service.d/90-mount-lukshdrs.conf
@@ -1,3 +1,4 @@
 [Unit]
-RequiresMountsFor=%t/spork/luks/
+Wants=run-spork-luks.mount
+After=run-spork-luks.mount
 ConditionPathExists=%t/spork/luks/%I.luks
