--- a/mkosi.images/system/mkosi.extra/usr/lib/tmpfiles.d/spork-sysroot.conf
+++ b/mkosi.images/system/mkosi.extra/usr/lib/tmpfiles.d/spork-sysroot.conf
@@ -1,9 +1,10 @@
 d /.overlay-etc 0755 root root -
 d /dev   0755 root root -
 d /etc   0755 root root -
-d /proc  0755 root root -
+d /proc  0555 root root -
 d /run   0755 root root -
 d /sys   0555 root root -
+d /tmp   1777 root root -
 d /usr   0755 root root -
 d /var   0755 root root -
 d /var/home 0755 root root -
