--- a/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptsetup-by-partlabel@.service
+++ b/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptsetup-by-partlabel@.service
@@ -5,6 +5,7 @@ Documentation=man:crypttab(5) man:systemd-cryptsetup-generator(8) man:systemd-cr
 DefaultDependencies=no
 After=cryptsetup-pre.target systemd-udevd-kernel.socket
 After=systemd-random-seed.service
+After=luks-format-by-%j@%i.service
 Wants=blockdev@dev-mapper-%i.target
 Before=blockdev@dev-mapper-%i.target
 Before=cryptsetup.target
@@ -13,6 +14,7 @@ Conflicts=umount.target
 Before=umount.target
 BindsTo=dev-disk-by\x2d%j-%i.device
 After=dev-disk-by\x2d%j-%i.device
+OnFailure=emergency.service
 
 [Service]
 Type=oneshot
