--- a/mkosi.images/system/mkosi.conf
+++ b/mkosi.images/system/mkosi.conf
@@ -7,3 +7,13 @@ ManifestFormat=json
 [Content]
 Bootable=yes
 Bootloader=systemd-boot
+
+# Configure locale explicitly so that all other locale data is stripped on distros whose package manager supports it.
+@Locale=C.UTF-8
+@Timezone=UTC
+
+RemovePackages=
+  xorg-x11-server-common
+  libxcb
+  xcb-util
+  mesa-libGL
