Adding useful packages, refactor config

--- a/mkosi.images/system/mkosi.extra/usr/lib/tmpfiles.d/spork-sysroot.conf
+++ b/mkosi.images/system/mkosi.extra/usr/lib/tmpfiles.d/spork-sysroot.conf
@@ -1,4 +1,8 @@
 d /.overlay-etc 0755 root root -
+d- /.overlay-etc/workdir 0755 root root -
+d- /.overlay-etc/overlay 0755 root root -
+z- /.overlay-etc/workdir 0755 root root -
+z- /.overlay-etc/overlay 0755 root root -
 d /dev   0755 root root -
 d /etc   0755 root root -
 d /proc  0555 root root -
