--- a/mkosi.images/system/mkosi.conf.d/20-base.conf
+++ b/mkosi.images/system/mkosi.conf.d/20-base.conf
@@ -1,12 +1,20 @@
 [Content]
 # System base
 Packages=
+  acl
+  attr
+  coreutils
   dbus
+  diffutils
   distribution-gpg-keys
+  findutils
+  grep
   kbd
-  langpacks-en
+  glibc-minimal-langpack
+  polkit
   sudo
   systemd
   tzdata
   udev
+  util-linux
   zram-generator
