--- a/mkosi.images/system/mkosi.conf.d/22-kernel-modules-initrd.conf
+++ b/mkosi.images/system/mkosi.conf.d/22-kernel-modules-initrd.conf
@@ -11,6 +11,11 @@ KernelModulesInitrdExclude=
   ^drivers/infiniband/
   ^drivers/media/
   ^drivers/net/wireless/
+  ^drivers/net/
+  ^drivers/staging/
+  ^drivers/nfc/
+  ^drivers/thunderbolt/
+  ^kernel/kheaders
   ^sound/
   test
 
