--- a/mkosi.images/system/mkosi.conf.d/26-disks.conf
+++ b/mkosi.images/system/mkosi.conf.d/26-disks.conf
@@ -13,6 +13,8 @@ Packages=
   cryptsetup
   integritysetup
   libfido2
+  libluksmeta
+  luksmeta
   tpm2-tss
   veritysetup
 
@@ -25,5 +27,10 @@ Packages=
   erofs-utils
   f2fs-tools
   fuse
+  fuse-overlayfs
+  fuse-sshfs
+  kpartx
+  gdisk
+  parted
   squashfs-tools
   xfsprogs
