--- a/mkosi.images/system/mkosi.conf.d/44-libvirt.conf
+++ b/mkosi.images/system/mkosi.conf.d/44-libvirt.conf
@@ -4,6 +4,7 @@ Packages=
   edk2-ovmf
   edk2-tools
   guestfs-tools
+  gvisor-tap-vsock-gvforwarder
   libvirt-client
   libvirt-daemon-config-nwfilter
   libvirt-daemon-driver-interface
