--- a/mkosi.images/system/mkosi.conf.d/46-podman.conf
+++ b/mkosi.images/system/mkosi.conf.d/46-podman.conf
@@ -1,4 +1,12 @@
 [Content]
 Packages=
+  aardvark-dns
+  catatonit
+  containernetworking-plugins
+  dnsmasq
+  netavark
   podman
+  podman-plugins
   skopeo
+  slirp4netns
+  systemd-container
