--- a/mkosi.images/system/mkosi.conf.d/50-tools.conf
+++ b/mkosi.images/system/mkosi.conf.d/50-tools.conf
@@ -14,6 +14,8 @@ Packages=
   coreutils
   file
   findutils
+  git
+  lsof
   tree
   util-linux
 
@@ -22,6 +24,12 @@ Packages=
   bash
   bash-color-prompt
   bash-completion
+  foot-terminfo
+  kitty-terminfo
+  less
+  ncurses
+  qrencode
+  which
   zsh
 
 # Text editors
@@ -34,7 +42,6 @@ Packages=
   diffutils
   gawk
   jq
-  less
   moreutils
   patch
   patchutils
@@ -46,6 +53,9 @@ Packages=
   tar
   gzip
   bzip2
+  lzo
+  lz4
+  snappy
   xz
   zip
   zstd
