--- a/mkosi.images/system/mkosi.conf.d/51-crypto.conf
+++ b/mkosi.images/system/mkosi.conf.d/51-crypto.conf
@@ -2,6 +2,10 @@
 Packages=
   fido2-tools
   gnupg2
+  nss
+  nss-tools
+  openssl
+  openssl-libs
   python3-cryptography
   tpm2-pkcs11
   tpm2-pkcs11-tools
