--- a/initrd/mkosi.conf
+++ b/initrd/mkosi.conf
@@ -10,142 +10,114 @@ Bootable=no
 BuildPackages=
 ExtraTrees=../secure-boot/public:/etc/secure-boot/
 
-Packages=
+#Packages=
 
 # System base
 Packages=
-         audit-libs
-         bash
-         coreutils
-         dbus
-         kbd
-         qrencode
-         systemd
-         udev
-         util-linux
-         zram-generator
+  audit-libs
+  bash
+  coreutils
+  diffutils
+  dbus
+  findutils
+  kbd
+  systemd
+  udev
+  util-linux
+  zram-generator
 
 # Measured boot
 Packages=
-         efibootmgr
-         efitools
-         efivar
-         ima-evm-utils
-         keyutils
-         sbsigntools
-         tpm2-tools
-         tpm2-tss
+  efibootmgr
+  ima-evm-utils
 
 # Disks
 Packages=
-         device-mapper
-         lvm2
-         mdadm
-         nvme-cli
+  device-mapper
+  lvm2
+  mdadm
+  nvme-cli
 
 # File systems
 Packages=
-         btrfs-progs
-         composefs
-         dosfstools
-         e2fsprogs
-         erofs-utils
-         fuse
-         f2fs-tools
-         gdisk
-         squashfs-tools
-         xfsprogs
+  btrfs-progs
+  dosfstools
+  e2fsprogs
+  erofs-utils
+  fuse
+  xfsprogs
 
 # Encryption/authentication
 Packages=
-         #clevis-luks
-         #clevis-pin-tpm2
-         #clevis-systemd
-         cryptsetup
-         fido2-tools
-         gnupg2
-         google-authenticator
-         integritysetup
-         libfido2
-         oathtool
-         #tpm2-pkcs11
-         #tpm2-pkcs11-tools
-         tpm2-tss
-         veritysetup
-
-# Network setup
-Packages=
-         ca-certificates
-         iproute
-         iputils
+  cryptsetup
+  gnupg2
+  integritysetup
+  libfido2
+  oathtool
+  tpm2-tss
+  veritysetup
 
 # Compression/archives
 Packages=
-         cpio
-         tar
-         gzip
-         bzip2
-         xz
-         zip
-         zstd
+  cpio
+  tar
+  gzip
+  bzip2
+  snappy
+  xz
+  zip
+  zstd
 
 # Useful tools
 Packages=
-         acl
-         attr
-         busybox
-         curl
-         diffutils
-         findutils
-         gawk
-         jq
-         less
-         lsof
-         nano
-         openssh-clients
-         openssl
-         passwd
-         procps-ng
-         rsync
-         sed
-         shadow-utils
-         vim-minimal
-         wget
-         xxd
+  acl
+  attr
+  busybox
+  gawk
+  jq
+  less
+  nano
+  openssl
+  passwd
+  procps-ng
+  sed
+  shadow-utils
 
 CleanPackageMetadata=yes
 RemoveFiles=
-            # we don't need this after the binary catalogs have been built
-            /usr/lib/systemd/catalog
-            /etc/udev/hwdb.d
-            /usr/lib/udev/hwdb.d
+  # we don't need this after the binary catalogs have been built
+  /usr/lib/systemd/catalog
+  /etc/udev/hwdb.d
+  /usr/lib/udev/hwdb.d
 
-            # this is not needed by anything updated in the last 20 years
-            /etc/services
+  # this is not needed by anything updated in the last 20 years
+  /etc/services
 
-            # Including kernel images in the initrd is generally not useful.
-            # This also stops mkosi from extracting the kernel image out of the image as a separate output.
-            /usr/lib/modules/*/vmlinuz*
-            /usr/lib/modules/*/System.map
+  # Including kernel images in the initrd is generally not useful.
+  # This also stops mkosi from extracting the kernel image out of the image as a separate output.
+  /usr/lib/modules/*/vmlinuz*
+  /usr/lib/modules/*/System.map
 
-            /etc/pki/ca-trust/extracted/java
-            /boot/efi/*
-            /efi/EFI
-            /var/log
-            /var/cache
-            /usr/lib/sysimage/libdnf5/transaction_history.sqlite*
-            /var/cache/ldconfig/aux-cache
-            /usr/share/gcc*
-            /usr/share/gdb*
-            /usr/share/gnupg/help.*.txt
-            /usr/share/doc/*
-            /usr/share/info/*
-            /usr/share/man/*
+  /etc/pki/ca-trust/extracted/java
+  /boot/efi/*
+  /efi/EFI
+  /var/log
+  /var/cache
+  /usr/lib/sysimage/libdnf5/transaction_history.sqlite*
+  /var/cache/ldconfig/aux-cache
+  /usr/share/gcc*
+  /usr/share/gdb*
+  /usr/share/gnupg/help.*.txt
+  /usr/share/doc/*
+  /usr/share/info/*
+  /usr/share/man/*
 
 # Not needed inside the initrd
 RemovePackages=
-               dracut
-               systemd-boot
+  dracut
+  systemd-boot
+  man-db
+  man-pages
 
 # Configure locale explicitly so that all other locale data is stripped on distros whose package manager supports it.
 @Locale=C.UTF-8
