--- a/initrd/mkosi.extra/usr/lib/systemd/system/luks-format-detached-by-partuuid@.service
+++ b/initrd/mkosi.extra/usr/lib/systemd/system/luks-format-detached-by-partuuid@.service
@@ -36,5 +36,5 @@ Environment="LUKSFORMAT_DETACHED_HEADER=%t/spork/luks/%I.luks"
 #Environment="LUKSFORMAT_FIDO2_DEVICE=auto"
 # Run mkfs or similar tool on the disk after formatting:
 #Environment="LUKSFORMAT_MKFS="
-ExecCondition=/usr/bin/udevadm lock -d '/dev/disk/by-%J/%I' /usr/libexec/is-disk-blank '/dev/disk/by-%J/%I'
+ExecCondition=/usr/libexec/is-disk-blank '/dev/disk/by-%J/%I'
 ExecStart=/usr/libexec/luks-format '/dev/disk/by-%J/%I'
