--- a/mkosi.conf.d/80-sysprep.conf
+++ b/mkosi.conf.d/80-sysprep.conf
@@ -1,9 +1,10 @@
 [Content]
 RemoveFiles=
-            /etc/fstab
-            /etc/group-
-            /etc/passwd-
-            /etc/shadow-
-            /etc/gshadow-
-            /etc/subuid-
-            /etc/subgid-
+  /etc/fstab
+  /etc/group-
+  /etc/passwd-
+  /etc/shadow-
+  /etc/gshadow-
+  /etc/subuid-
+  /etc/subgid-
+  /etc/.pwd.lock
