debug: init directly to /bin/sh in initrd

--- a/mkosi.profiles/debug/mkosi.conf.d/50-initrd-debug.conf
+++ b/mkosi.profiles/debug/mkosi.conf.d/50-initrd-debug.conf
@@ -14,5 +14,10 @@ InitrdPackages=
   fido2-tools
   yubikey-manager
   yubico-piv-tool
+  cryptsetup
+  integritysetup
+  veritysetup
+  oathtool
 KernelCommandLine=
-  rd.rescue
+  rdinit=/bin/sh
+  rd.emergency
