initrd: Refactor boot steps

--- a/initrd/mkosi.extra/usr/lib/systemd/system/initrd-auth-complete.service
+++ b/initrd/mkosi.extra/usr/lib/systemd/system/initrd-auth-complete.service
@@ -3,10 +3,12 @@ Description=User authentication complete
 DefaultDependencies=no
 Requires=initrd-auth.target
 After=initrd-auth.target
+Wants=wait-for-yubikey.target
+Before=wait-for-yubikey.target
 Before=shutdown.target initrd-switch-root.target
 Conflicts=shutdown.target initrd-switch-root.target
+# Next step after authentication has succeeded:
 OnSuccess=initrd-init-disks.target
-#OnSuccessJobMode=flush
 
 [Service]
 Type=oneshot
