--- a/initrd/mkosi.extra/usr/lib/systemd/system/initrd-totp-generate@.service
+++ b/initrd/mkosi.extra/usr/lib/systemd/system/initrd-totp-generate@.service
@@ -5,10 +5,11 @@ After=initrd-auth-pre.target
 After=systemd-random-seed.service
 Before=initrd-totp.service
 Before=initrd-auth.target
-Before=shutdown.target initrd-switch-root.target
-Conflicts=shutdown.target initrd-switch-root.target
+Before=shutdown.target
+Conflicts=shutdown.target
 ConditionCredential=!initrd-totp-%I
 ConditionPathExists=!%t/credstore.encrypted/initrd-totp-%I
+ConditionPathExists=/usr/lib/initrd-release
 ConditionSecurity=tpm2
 RequiresMountsFor=%t/credstore.encrypted
 RequiresMountsFor=/efi/loader/credentials
