--- a/initrd/mkosi.extra/usr/lib/systemd/system/initrd-totp.service
+++ b/initrd/mkosi.extra/usr/lib/systemd/system/initrd-totp.service
@@ -4,14 +4,16 @@ DefaultDependencies=no
 Wants=systemd-ask-password-console.path
 After=systemd-ask-password-console.path
 After=systemd-ask-password-plymouth.path
+Wants=initrd-auth-pre.target
 After=initrd-auth-pre.target
 Wants=initrd-totp-generate@machine.service
 After=initrd-totp-generate@machine.service
 Wants=initrd-totp-generate@user.service
 After=initrd-totp-generate@user.service
 Before=initrd-auth.target
-Before=shutdown.target initrd-switch-root.target
-Conflicts=shutdown.target initrd-switch-root.target
+Before=shutdown.target
+Conflicts=shutdown.target
+ConditionPathExists=/usr/lib/initrd-release
 JobTimeoutSec=infinity
 JobRunningTimeoutSec=infinity
 
