--- a/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptenroll-convert-empty-to-fido2@.service
+++ b/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptenroll-convert-empty-to-fido2@.service
@@ -10,8 +10,8 @@ After=cryptsetup-rotate-keys@%i.service
 Wants=cryptsetup-pre.target
 After=cryptsetup-pre.target
 Before=cryptsetup.target
-Before=shutdown.target initrd-switch-root.target
-Conflicts=shutdown.target initrd-switch-root.target
+Before=shutdown.target
+Conflicts=shutdown.target
 
 [Service]
 Type=oneshot
