--- a/initrd/mkosi.extra/usr/lib/systemd/system/refresh-veritytab-from-vg@.service
+++ b/initrd/mkosi.extra/usr/lib/systemd/system/refresh-veritytab-from-vg@.service
@@ -9,8 +9,8 @@ After=copy-sys-images@%i.service
 Before=initrd-install-sys.target
 Before=initrd-root-device.target initrd-usr-device.target initrd-root-fs.target initrd-usr-fs.target initrd-fs.target
 Before=sysroot.mount sysusr-usr.mount sysroot-usr.mount sysroot-etc.mount
-Before=shutdown.target initrd-switch-root.target
-Conflicts=shutdown.target initrd-switch-root.target
+Before=shutdown.target
+Conflicts=shutdown.target
 ConditionPathExistsGlob=/dev/%I/*-verity
 
 [Service]
