debug: Fix initrd debug profile config
The mkosi invocation for building the initrd is not passed which profile
the main build is using so we can not match on Profile=xyz. Move the
debug profile initrd configuration into the profile directory and add an
additional InitrdInclude instead.

--- a/mkosi.profiles/debug/mkosi.conf.d/50-initrd-debug.conf
+++ b/mkosi.profiles/debug/mkosi.conf.d/50-initrd-debug.conf
@@ -1,23 +1,2 @@
-[Content]
-InitrdPackages=
-  vim-minimal
-  diffutils
-  curl
-  rsync
-  gdisk
-  wget
-  iproute
-  usbutils
-  pciutils
-  shadow-utils
-  passwd
-  fido2-tools
-  yubikey-manager
-  yubico-piv-tool
-  cryptsetup
-  integritysetup
-  veritysetup
-  oathtool
-KernelCommandLine=
-  rdinit=/bin/sh
-  rd.emergency
+[Config]
+InitrdInclude=initrd-debug/
