initrd: rm /run/* when building

--- a/initrd/mkosi.conf
+++ b/initrd/mkosi.conf
@@ -112,6 +112,7 @@ RemoveFiles=
   /usr/share/doc/*
   /usr/share/info/*
   /usr/share/man/*
+  /run/*
 
 # Not needed inside the initrd
 RemovePackages=
